--- a/README
+++ b/README
@@ -4,7 +4,7 @@ For legal informations see COPYING
 
 For any program help check run ./bench -h
 
-For a list of features which might be added in the future see WHISHLIST
+For a list of features which might be added in the future see WISHLIST
 
 For a changelog see CHANGELOG
 
