--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+httpbench (0.0.1ubuntu2) oneiric; urgency=low
+
+  * Another version
+
+ -- Paul Buetow <pb@venus>  Sun, 08 Apr 2012 17:30:02 +0200
+
+httpbench (0.0.1ubuntu1) oneiric; urgency=low
+
+  * A new version
+
+ -- Paul Buetow <pb@venus>  Sun, 08 Apr 2012 17:26:43 +0200
+
 httpbench (0.0.0) unstable; urgency=low
 
   * Initial Release.
