--- a/debian/README
+++ b/debian/README
@@ -1,6 +1,6 @@
 The Debian Package httpbench
 ----------------------------
 
-Comments regarding the Package
+All infos can be read from the manual page or the project website.
 
  -- Paul Buetow <paul@buetow.org>  Sun, 08 Apr 2012 15:23:53 +0200
