--- a/debian/README
+++ b/debian/README
@@ -1,6 +1,7 @@
 The Debian Package httpbench
 ----------------------------
 
-All infos can be read from the manual page or the project website.
+This is just a hobby project. Not sure if everything meets the debian 
+policy though.
 
  -- Paul Buetow <paul@buetow.org>  Sun, 08 Apr 2012 15:23:53 +0200
