--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+httpbench (0.1.0) unstable; urgency=low
+
+  * Initial working release.
+
+ -- Paul Buetow <paul@buetow.org>  Mon, 09 Apr 2012 10:01:46 +0200
+
 httpbench (0.0.0) unstable; urgency=low
 
   * Initial Release.
