--- a/docs/httpbench.1
+++ b/docs/httpbench.1
@@ -124,7 +124,7 @@
 .\" ========================================================================
 .\"
 .IX Title "HTTPBENCH 1"
-.TH HTTPBENCH 1 "2012-04-09" "httpbench 0.1.0" "User Commands"
+.TH HTTPBENCH 1 "2012-04-09" "httpbench 0.1.0+nmu1" "User Commands"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -133,7 +133,7 @@
 httpbench \- Simple HTTP benchmarking tool
 .SH "SYNOPSIS"
 .IX Header "SYNOPSIS"
-httpbench \-u <url> \-d sec \-d concurrent \-r rps [\-t ms] [\-e expected]
+httpbench \-u <urls.txt> \-d sec \-d concurrent \-r rps [\-t ms] [\-e expected]
 .SH "DESCRIPTION"
 .IX Header "DESCRIPTION"
 \&\s-1HTTP\s0 Bench is a small program for Linux, \s-1UNIX\s0 and a like written in C which can be used to benchmark \s-1HTTP\s0 servers. For more infos please consult the project website.
