--- a/docs/httpbench.1
+++ b/docs/httpbench.1
@@ -124,7 +124,7 @@
 .\" ========================================================================
 .\"
 .IX Title "HTTPBENCH 1"
-.TH HTTPBENCH 1 "2012-04-09" "httpbench 0.1.0+nmu1" "User Commands"
+.TH HTTPBENCH 1 "2012-04-17" "httpbench 0.1.0+nmu1" "User Commands"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -133,7 +133,7 @@
 httpbench \- Simple HTTP benchmarking tool
 .SH "SYNOPSIS"
 .IX Header "SYNOPSIS"
-httpbench \-u <urls.txt> \-d sec \-d concurrent \-r rps [\-t ms] [\-e expected]
+httpbench \-u <urls.txt> \-d sec \-c concurrent \-r rps [\-t ms] [\-e expected]
 .SH "DESCRIPTION"
 .IX Header "DESCRIPTION"
 \&\s-1HTTP\s0 Bench is a small program for Linux, \s-1UNIX\s0 and a like written in C which can be used to benchmark \s-1HTTP\s0 servers. For more infos please consult the project website.
@@ -164,10 +164,6 @@ Requests per second wanted for the benchmark.
 .el .IP "\f(CW\-t timeoutms\fR" 12
 .IX Item "-t timeoutms"
 Timeout in milliseconds for each request. This timeout will actually not interrupt any requests. It's there just for statistical reasons. E.g. how many requests take longer than x milliseconds?
-.ie n .IP """\-d seconds""" 12
-.el .IP "\f(CW\-d seconds\fR" 12
-.IX Item "-d seconds"
-Duration of the benchmark in seconds. E.g. 300 for a five minutes benchmark.
 .ie n .IP """\-e expectedresponsestr""" 12
 .el .IP "\f(CW\-e expectedresponsestr\fR" 12
 .IX Item "-e expectedresponsestr"
