--- a/docs/httpbench.pod
+++ b/docs/httpbench.pod
@@ -4,7 +4,7 @@ httpbench - Simple HTTP benchmarking tool
 
 =head1 SYNOPSIS
 
-httpbench -u <urls.txt> -d sec -c concurrent -r rps [-t ms] [-e expected] 
+httpbench -u <url or urllist.txt> -d sec -c concurrent -r rps [-t ms] [-e expected] 
 
 =head1 DESCRIPTION
 
@@ -16,9 +16,9 @@ HTTP Bench is a small program for Linux, UNIX and a like written in C which can 
 
 =over 12
 
-=item C<-u urllistfile>
+=item C<-u url or urllist.txt>
 
-Path to a text file containing a list of all HTTP-URLs to request during a benchmark. 
+An URL to benchmark if argument begins with http:// or https:// or a path to a text file containing a list of all HTTP-URLs to request during a benchmark. Each line should start with http:// or https://.
 
 =item C<-d seconds>
 
@@ -56,9 +56,9 @@ The expected response of a request. E.g. all requests should contain HTML in its
 
 Iterates over each url in mylist.txt with 10 cuncurrent threads for 60 seconds and tries to reach 1000 requests per second. Each curl failure will be reported at the end of the test (total count and total %).
 
-=item C<httpbench -u mylist.txt -d 300 -c 1000 -r 10000 -t 20 -e "Hello World">
+=item C<httpbench -u http://www.example.com -d 300 -c 1000 -r 10000 -t 20 -e "Hello World">
 
-Iterates over each url in mylist.txt with 1000 cuncurrent threads for 5 minutes and tries to reach 10000 requests per second. Each request which takes longer than 20 milliseconds will be reported at the end of the test (total count and total %) and each request which does not contain "Hello World" in its response string will also be reported (total count and total %). The curl errors will also be reported.
+Benchmarks the single URL http://www.example.com with 1000 cuncurrent threads for 5 minutes and tries to reach 10000 requests per second. Each request which takes longer than 20 milliseconds will be reported at the end of the test (total count and total %) and each request which does not contain "Hello World" in its response string will also be reported (total count and total %). The curl errors will also be reported.
 
 =back
 
