--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+httpbench (0.2.1) stable; urgency=low
+
+  * Minor bugfix release
+
+ -- Paul Buetow <paul@buetow.org>  Fri, 20 Apr 2012 18:03:48 +0200
+
 httpbench (0.2.0) stable; urgency=low
 
   * -u also understands a single url (see manpage)
