--- a/docs/httpbench.1
+++ b/docs/httpbench.1
@@ -124,7 +124,7 @@
 .\" ========================================================================
 .\"
 .IX Title "HTTPBENCH 1"
-.TH HTTPBENCH 1 "2013-03-03" "httpbench 0.2.1.1" "User Commands"
+.TH HTTPBENCH 1 "2013-12-31" "httpbench 0.2.1.1" "User Commands"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -183,4 +183,4 @@ Benchmarks the single \s-1URL\s0 http://www.example.com with 1000 cuncurrent thr
 See package description or project website.
 .SH "AUTHOR"
 .IX Header "AUTHOR"
-Paul Buetow \- <http://httpbench.buetow.org>
+Paul Buetow \- <http://httpbench.buetow.foo>
